...
            title: Padding(padding: const EdgeInsets.symmetric(),
            child: Row(
              mainAxisAlignment: MainAxisAlignment.start,
              children: [
                SvgIcon(assetName: 'assets/icons/Logo.svg', size: 40,),
                SizedBox(width: 4),
                Text("Harmony"),
              ],
            ),
            )

          ),

...
